Sponsor logos now show on mobile, but only on sponsorship page. Resolves #18

--- a/css/main.sass
+++ b/css/main.sass
@@ -394,6 +394,10 @@ footer ul
   .img-row img
     width: 100%
 
+@media (min-width: 756px) and (max-width: 850px)
+  header
+    padding-right: 90px
+
 @media (max-width: 585px)
   tbody, tr
     display: block
